# omg-chatbot-backend

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
PROMPTS/: prompts.py
agents/: react_agents.py
api/: chat.py
app/: graph.py
models/: LLM.py
schemas/: chat_models.py
scripts/: ingest_spiritual_pdfs.py
tools/: db_tool.py  spiritual_rag_tool.py  tavily_search.py
utils/: logger.py  pdf_loader.py  postgres_connector.py  vector_store.py
